--- a/index.html
+++ b/index.html
@@ -5,21 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="card.css" />
     <title>CSS Tricks Cards</title>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap'" rel="stylesheet">
   </head>
   <body>
     <section class="card-list">
       <article class="card">
         <header class="card-header">
           <p>Aug 28th, 2020</p>
-          <h2>Here’s How I Solved a Weird Bug Using Tried and True Debugging Strategies</h2>
-        </header>
-      </article>
-
-      <article class="card">
-        <header class="card-header">
-          <p>Aug 28th, 2020</p>
-          <h2>Here’s How I Solved a Weird Bug Using Tried and True Debugging Strategies</h2>
+          <h2>Modifying Specific Letters with CSS and JavaScript
+          </h2>
         </header>
       </article>
       
