--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
           <h2>Modifying Specific Letters with CSS and JavaScript
           </h2>
         </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/bretcameron/">
+            <img src="https://secure.gravatar.com/avatar/7355c1f508466500bc258fe22045aca0?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Bret Cameron
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
       </article>
       
       <article class="card">
@@ -22,6 +41,25 @@
           <p>Aug 25th, 2020</p>
           <h2>Designing a JavaScript Plugin System</h2>
         </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/bryanbraun/">
+            <img src="https://secure.gravatar.com/avatar/804fbd4a33d8269c714a89043fb95b89?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Bryan Braun
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
       </article>
 
       <article class="card">
@@ -29,6 +67,103 @@
           <p>Aug 14th, 2020</p>
           <h2>That’s Just How I Scroll</h2>
         </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/chriscoyier/">
+            <img src="https://secure.gravatar.com/avatar/8081b26e05bb4354f7d65ffc34cbbd67?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Chris Coyier
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
+      </article>
+      <article class="card">
+        <header class="card-header">
+          <p>Aug 28th, 2020</p>
+          <h2>Modifying Specific Letters with CSS and JavaScript
+          </h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/bretcameron/">
+            <img src="https://secure.gravatar.com/avatar/7355c1f508466500bc258fe22045aca0?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Bret Cameron
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
+      </article>
+      
+      <article class="card">
+        <header class="card-header">
+          <p>Aug 25th, 2020</p>
+          <h2>Designing a JavaScript Plugin System</h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/bryanbraun/">
+            <img src="https://secure.gravatar.com/avatar/804fbd4a33d8269c714a89043fb95b89?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Bryan Braun
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>Aug 14th, 2020</p>
+          <h2>That’s Just How I Scroll</h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/chriscoyier/">
+            <img src="https://secure.gravatar.com/avatar/8081b26e05bb4354f7d65ffc34cbbd67?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Chris Coyier
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
       </article>
   </body>
 </html>
