fix tags overflow

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
           <a href="#">html</a>
           <a href="#">css</a>
           <a href="#">web-dev</a>
+          <a href="#">docker</a>
         </div>
       </article>
       <article class="card">
         <header class="card-header">
           <p>Aug 28th, 2020</p>
-          <h2>Modifying Specific Letters with CSS and JavaScript
-          </h2>
+          <h2>Modifying Specific Letters with CSS and JavaScript</h2>
         </header>
 
         <div class="card-author">
@@ -111,6 +111,8 @@
           <a href="#">html</a>
           <a href="#">css</a>
           <a href="#">web-dev</a>
+          <a href="#">sass</a>
+          <a href="#">dart</a>
         </div>
       </article>
       
@@ -140,6 +142,56 @@
         </div>
       </article>
 
+      <article class="card">
+        <header class="card-header">
+          <p>Aug 14th, 2020</p>
+          <h2>That’s Just How I Scroll</h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/chriscoyier/">
+            <img src="https://secure.gravatar.com/avatar/8081b26e05bb4354f7d65ffc34cbbd67?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Chris Coyier
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
+      </article>
+      <article class="card">
+        <header class="card-header">
+          <p>Aug 14th, 2020</p>
+          <h2>That’s Just How I Scroll</h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="https://css-tricks.com/author/chriscoyier/">
+            <img src="https://secure.gravatar.com/avatar/8081b26e05bb4354f7d65ffc34cbbd67?s=80&d=retro&r=pg" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Chris Coyier
+          </div>
+        </div>
+        <div class="tags">
+          <a href="#">html</a>
+          <a href="#">css</a>
+          <a href="#">web-dev</a>
+        </div>
+      </article>
       <article class="card">
         <header class="card-header">
           <p>Aug 14th, 2020</p>
